widget overflow fixed.

--- a/src/css/component/widget.less
+++ b/src/css/component/widget.less
@@ -4,4 +4,5 @@
 #widget {
     position: relative;
     height: 100vh;
+    overflow: hidden;
 }
